--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jquery": "^3.6.0",
-    "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2"
+    "jquery": ">=3.6.0",
+    "webpack": ">=5.49.0",
+    "webpack-cli": ">=4.7.2"
   }
 }
