--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jquery": "3.6.0",
-    "webpack": "5.58.2",
-    "webpack-cli": "4.9.0"
+    "jquery": ">=3.6.0",
+    "webpack": ">=5.58.2",
+    "webpack-cli": ">=4.9.0"
   }
 }
